--- a/Source/Engine/Core/Core.vcxproj.filters
+++ b/Source/Engine/Core/Core.vcxproj.filters
@@ -13,7 +13,7 @@
     <ClCompile Include="Memory.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\..\Downloads\Time.cpp">
+    <ClCompile Include="Time.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
@@ -27,13 +27,19 @@
     <ClInclude Include="Random.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\..\Downloads\Time.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="Vector2.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Core.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Time.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="MathUtils.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
