--- a/Source/Engine/Renderer/Renderer.vcxproj.filters
+++ b/Source/Engine/Renderer/Renderer.vcxproj.filters
@@ -13,11 +13,17 @@
     <ClCompile Include="Model.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="ModelManager.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Model.h" />
+    <ClInclude Include="ModelManager.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
