--- a/Source/Engine/Renderer/Renderer.vcxproj.filters
+++ b/Source/Engine/Renderer/Renderer.vcxproj.filters
@@ -16,6 +16,12 @@
     <ClCompile Include="ModelManager.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Font.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Text.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -23,6 +29,12 @@
     </ClInclude>
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelManager.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Font.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Text.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
